# counter-app

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-release.yml
src/counter_app/: AtomsView.py  ViewController.py  main.py  view_chanel_data.py
src/resources/: resources.qrc
src/ui/: mainwindow.ui
src/web_viewer/: package.json  tsconfig.json  vite.config.js
src/web_viewer/src/: Viewer.ts  global.d.ts  index.html  main.ts  style.css  web-chanel-interface.ts
src/web_viewer/tools/: generate_qrc.cjs
tasks/: clean.py  generate_version.py  release.py
