[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "counter-app"
version = "1.0.1"
description = "Standalone app for click counter"
authors = ["Oleksandr Foia <foia.alexander@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "counter_app", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pyinstaller = ">=6.16.0,<7.0.0"
pyside6 = ">=6.10.0,<7.0.0"

[tool.poetry.scripts]
prepare-assets = "tasks.release:build_assets"
counter-app = "counter_app.main:main"

[tool.poe.tasks]
compile-qrc = "pyside6-rcc src/resources/resources.qrc -o src/counter_app/ui_gen/resources_rc.py"
compile-ui = "pyside6-uic src/ui/mainwindow.ui --import-from counter_app.ui_gen -o src/counter_app/ui_gen/ui_MainWindow.py"
generate-version = "python tasks/generate_version.py"
compile-assets = """
poe compile-qrc
poe compile-assets
poe embed-version
"""
run = "python src/counter_app/main.py"
lint = "ruff check ."
lint_fix = """
ruff check . --fix
ruff format .
"""
format = "ruff format ."
installer-build = "pyinstaller --onefile src/counter_app/main.py --name counter-app"
build = { sequence = [
    "generate-version",
    "installer-build"], help = "Build the application" }
clean = "python tasks/clean.py"
release = "python tasks/release.py"
open-designer = "pyside6-designer"


[tool.poetry.group.dev.dependencies]
poethepoet = ">=0.37.0,<0.38.0"
pytest = ">=8.4.2,<9.0.0"
scipy-stubs = ">=1.16.2.4,<2.0.0.0"
ruff = "^0.14.4"
black = "^25.9.0"
mypy = "^1.18.2"
