[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "counter-app"
version = "1.1.1"
description = "Standalone app for click counter"
authors = ["Oleksandr Foia <foia.alexander@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "counter_app", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pyinstaller = ">=6.16.0,<7.0.0"
pyside6 = ">=6.10.0,<7.0.0"

[tool.poetry.scripts]
counter-app = "counter_app.main:main"

[tool.poe.tasks]
compile-qrc = [
    { cmd = "mkdir -p src/counter_app/ui_gen" },
    { cmd = "pyside6-rcc src/resources/resources.qrc -o src/counter_app/ui_gen/resources_rc.py" }
]
compile-ui = [
    { cmd = "mkdir -p src/counter_app/ui_gen" },
    { cmd = "pyside6-uic src/ui/mainwindow.ui --from-imports counter_app.ui_gen -o src/counter_app/ui_gen/ui_MainWindow.py" }
]
generate-version = "python tasks/generate_version.py"
compile-assets = { sequence = [
    "compile-qrc",
    "compile-ui",
    "compile-web-assets"
], help = "Compile resources" }
clean-build = { sequence = ["clean", "compile-assets", "build"] }
run = "python src/counter_app/main.py"
lint = "ruff check ."
lint_fix = [
    { cmd = "ruff check . --fix" },
    { cmd = "ruff format ." }
]
format = "ruff format ."

compile-web-assets = [
    { cmd = "npm install", cwd = "src/web_viewer" },
    { cmd = "npm run build", cwd = "src/web_viewer" },
    { cmd = "mkdir -p src/counter_app/web_view_gen" },
    { cmd = "pyside6-rcc src/web_viewer/web_dist/web_view.qrc -o src/counter_app/web_view_gen/web_rc.py" }
]

installer-build = "pyinstaller --onefile src/counter_app/main.py --name counter-app"
build = { sequence = [
    "generate-version",
    "installer-build"], help = "Build the application" }
clean = "python tasks/clean.py"
release = "python -m tasks.release tasks/release.py"
open-designer = "pyside6-designer"


[tool.poetry.group.dev.dependencies]
poethepoet = ">=0.37.0,<0.38.0"
pytest = ">=8.4.2,<9.0.0"
scipy-stubs = ">=1.16.2.4,<2.0.0.0"
ruff = "^0.14.4"
black = "^25.9.0"
mypy = "^1.18.2"
